src/tests/detect/snapshots/package_manager_detector_rs__tests__detect__parse_package_json__other_known_agents.snap
---
source: src/tests/detect/parse_package_json.rs
expression: package_info
snapshot_kind: text
---
HandlePackageManagerReturn {
    name: "npm",
    agent: "npm",
    version: "1.2.3",
}
