src/tests/detect/snapshots/package_manager_detector_rs__tests__detect__parse_package_json__pnpm_v6.snap
---
source: src/tests/detect/parse_package_json.rs
expression: package_info
snapshot_kind: text
---
HandlePackageManagerReturn {
    name: "pnpm",
    agent: "pnpm@6",
    version: "6.32.0",
}
