src/tests/detect/snapshots/package_manager_detector_rs__tests__detect__parse_package_json__yarn_v1.snap
---
source: src/tests/detect/parse_package_json.rs
expression: package_info
snapshot_kind: text
---
HandlePackageManagerReturn {
    name: "yarn",
    agent: "yarn",
    version: "1.22.19",
}
